<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_data"
        android:textColor="#afb1b3"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="#a1887f"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linearcolor"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:onClick="onAllClearClick"
                android:id="@+id/btn_allclear"
                android:text="@string/ac"
                android:textSize="20sp"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:id="@+id/btn_percent"
                android:text="@string/percent"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:onClick="onBackClick"
                android:id="@+id/btn_backspace"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/background2"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/devide"
                android:id="@+id/btn_devide"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_7"
                android:id="@+id/btn_7"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_8"
                android:id="@+id/btn_8"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_9"
                android:id="@+id/btn_9"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/multi"
                android:id="@+id/btn_multiply"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_4"
                android:id="@+id/btn_4"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_5"
                android:id="@+id/btn_5"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_6"
                android:id="@+id/btn_6"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/minus"
                android:id="@+id/btn_minus"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_1"
                android:id="@+id/btn_1"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_2"
                android:id="@+id/btn_2"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_3"
                android:id="@+id/btn_3"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/plus"
                android:id="@+id/btn_plus"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_00"
                android:id="@+id/btn_00"
                android:textSize="20sp"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/_0"
                android:id="@+id/btn_0"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:onClick="onDigitClick"
                android:text="@string/dot"
                android:id="@+id/btn_."
                />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:onClick="onEqualClick"
                android:text="@string/equal"
                android:backgroundTint="@color/background2"
                android:textColor="@color/white"
                android:id="@+id/btn_equal"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>